Delete invalid slash.

--- a/templates/ConvertGps2Wtw/index.html
+++ b/templates/ConvertGps2Wtw/index.html
@@ -96,7 +96,7 @@
       }
 
       function setMarker(lat, lng, w3wa) {
-        const tarUrl = `https://what3words.com/${w3wa}/`
+        const tarUrl = `https://what3words.com/${w3wa}`
         const contentString =
           '<div id="content">' +
           '<div id="siteNotice">' +
